# online_shopper_intention

./: Dockerfile  README.md  main.py  notebook copy.ipynb  notebook.ipynb  pyproject.toml
models/: logistic_regression.pkl  xgboost.pkl
src/: app.py  cloud_predict.py  local_predict.py  model.py  predict.py  sample_predict.py
